Revert "fix: report: icon vertical align in project link"
This reverts commit 41fc3ba99f564ee62ecb34aa6888d73d29b26031.

--- a/assets/styles/report.css
+++ b/assets/styles/report.css
@@ -25,10 +25,6 @@
   background-color: #000;
 }
 
-#report #projectLink .ui.header {
-  display: inline;
-}
-
 #report #projectLink .ui.header > .icon {
   font-size: 1em;
   vertical-align: initial;
